--- a/text_guardian/android/app/src/main/AndroidManifest.xml
+++ b/text_guardian/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE"/>
+
     <application
+        <service
+        android:name=".NotificationListenerService"
+        android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE"
+        android:exported="true"
+        />
+
         android:label="text_guardian"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
