--- a/text_guardian/android/app/build.gradle
+++ b/text_guardian/android/app/build.gradle
@@ -26,12 +26,8 @@ android {
     namespace "com.example.text_guardian"
     compileSdk flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
-    defaultConfig{
-        multiDexEnabled true
-    }
 
     compileOptions {
-        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -68,7 +64,4 @@ flutter {
     source '../..'
 }
 
-dependencies {
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
-    
-}
+dependencies {}
