--- a/text_guardian/pubspec.yaml
+++ b/text_guardian/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   fl_chart: ^0.68.0
   flutter_settings_screens: ^0.3.4
-  flutter_local_notifications: ^17.2.1+1
+  flutter_local_notifications: ^17.2.2
+  awesome_notifications: ^0.9.3+1
 
 dev_dependencies:
   flutter_test:
