--- a/text_guardian/pubspec.yaml
+++ b/text_guardian/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   fl_chart: ^0.68.0
   flutter_settings_screens: ^0.3.4
   flutter_local_notifications: ^17.2.1+1
+  awesome_notifications: ^0.9.3+1
 
 dev_dependencies:
   flutter_test:
